@@ -18,11 +18,12 @@
  */
 package org.apache.accumulo.core.classloader;
 
+import java.io.UncheckedIOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Arrays;
-import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.apache.accumulo.core.spi.common.ContextClassLoaderFactory;
 import org.apache.accumulo.core.util.cache.Caches;
@@ -39,9 +40,7 @@ import com.github.benmanes.caffeine.cache.Cache;
  */
 public class URLContextClassLoaderFactory implements ContextClassLoaderFactory {
 
-  private static final AtomicBoolean isInstantiated = new AtomicBoolean(false);
   private static final Logger LOG = LoggerFactory.getLogger(URLContextClassLoaderFactory.class);
-  private static final String className = URLContextClassLoaderFactory.class.getName();
 
   // Cache the class loaders for re-use
   // WeakReferences are used so that the class loaders can be cleaned up when no longer needed
@@ -49,12 +48,6 @@ public class URLContextClassLoaderFactory implements ContextClassLoaderFactory {
   // so the class loader will be garbage collected when no more classes are loaded that reference it
   private final Cache<String,URLClassLoader> classloaders =
       Caches.getInstance().createNewBuilder(CacheName.CLASSLOADERS, true).weakValues().build();
-
-  public URLContextClassLoaderFactory() {
-    if (!isInstantiated.compareAndSet(false, true)) {
-      throw new IllegalStateException("Can only instantiate " + className + " once");
-    }
-  }
 
   @Override
   public ClassLoader getClassLoader(String context) {
@@ -64,11 +57,11 @@ public class URLContextClassLoaderFactory implements ContextClassLoaderFactory {
 
     return classloaders.get(context, k -> {
       LOG.debug("Creating URLClassLoader for context, uris: {}", context);
-      return new URLClassLoader(Arrays.stream(context.split(",")).map(url -> {
+      return new URLClassLoader(Arrays.stream(context.split(",")).map(p -> {
         try {
-          return new URL(url);
+          return URI.create(p).toURL();
         } catch (MalformedURLException e) {
-          throw new RuntimeException(e);
+          throw new UncheckedIOException(e);
         }
       }).toArray(URL[]::new), ClassLoader.getSystemClassLoader());
     });
