@@ -23,7 +23,7 @@ import static org.apache.accumulo.harness.AccumuloITBase.MINI_CLUSTER_ONLY;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.Socket;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collection;
 import java.util.Map;
 
@@ -92,7 +92,7 @@ public class ThriftServerBindsBeforeZooKeeperLockIT extends AccumuloClusterHarne
       monitor = startProcess(cluster, ServerType.MONITOR, freePort);
 
       while (true) {
-        URL url = new URL(monitorUrl);
+        var url = new URI(monitorUrl).toURL();
         try {
           HttpURLConnection cnxn = (HttpURLConnection) url.openConnection();
           final int responseCode = cnxn.getResponseCode();
@@ -244,23 +244,21 @@ public class ThriftServerBindsBeforeZooKeeperLockIT extends AccumuloClusterHarne
   private Process startProcess(MiniAccumuloClusterImpl cluster, ServerType serverType, int port)
       throws IOException {
     final Property property;
-    final Class<?> service;
-    switch (serverType) {
-      case MONITOR:
+    final Class<?> service = switch (serverType) {
+      case MONITOR -> {
         property = Property.MONITOR_PORT;
-        service = Monitor.class;
-        break;
-      case MANAGER:
+        yield Monitor.class;
+      }
+      case MANAGER -> {
         property = Property.MANAGER_CLIENTPORT;
-        service = Manager.class;
-        break;
-      case GARBAGE_COLLECTOR:
+        yield Manager.class;
+      }
+      case GARBAGE_COLLECTOR -> {
         property = Property.GC_PORT;
-        service = SimpleGarbageCollector.class;
-        break;
-      default:
-        throw new IllegalArgumentException("Irrelevant server type for test");
-    }
+        yield SimpleGarbageCollector.class;
+      }
+      default -> throw new IllegalArgumentException("Irrelevant server type for test");
+    };
 
     return cluster._exec(service, serverType, Map.of(property.getKey(), Integer.toString(port)))
         .getProcess();
